import Foundation

enum Identifiers {
    static let webView = "UnsplashWebView"
    static let authLoginButton = "Authenticate"
    static let imagesListLikeButton = "LikeButton"
    static let imageBackwardButton = "BackwardButton"
    static let profileLogoutButtom = "LogoutButton"
}
