enum AlertButtonTitle {
    static let ok = "ОК"
    static let again = "Повторить"
    static let cancel = "Отмена"
    static let yes = "Да"
    static let no = "Нет"
}
